# bevy_2048

./: Cargo.toml  README.md
src/: animation.rs  board.rs  main.rs
src/common/: game_size.rs  mod.rs  tile_components.rs
src/components/: game_state.rs  mod.rs  tile.rs
src/movement/: check_moveable.rs  finish_moving.rs  merge_animation.rs  merging.rs  mod.rs  moving_animation.rs  moving_direction.rs  moving_input.rs  moving_state.rs  set_moving.rs
src/score/: highscore.rs  mod.rs
src/tile_spawning/: despawn_animation.rs  despawn_tiles.rs  mod.rs  spawn_animation.rs  spawn_tiles.rs
src/ui/: explanation_node.rs  mod.rs  new_game_button.rs  score_texts.rs  title.rs
src/ui/left_side/: mod.rs  new_game_button.rs  score_texts.rs
src/ui/right_side/: explanation_node.rs  how_to_node.rs  mod.rs  title.rs
